lxc-traefik/traefik-files/traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: traefik-web-ui
  namespace: cattle-system
spec:
  ingressClassName: traefik
  rules:
  - host: logicalguy.com
    http:
      paths:
      - backend:
          service:
            name: traefik
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
